lekcje o servisach i dedency injection przerobione

--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -1,3 +1,7 @@
+parameters:
+    cache_adapter: sasssssss
+
+
 framework:
     cache:
         # Unique name of your app: used to compute stable namespaces for cache keys.
