--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,6 +10,9 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            $isDebug: '%kernel.debug%'
+        #    Psr\Log\LoggerInterface $mdLogger: '@monolog.logger.markdown' # z kursu symfony casts przypisanie
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -23,3 +26,14 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    #wpis z symfonycasts
+    App\Service\MarkdownHelper:
+        #bind i arguments to prawie to samo, bind jest troszke pomocniejszy :) 
+        bind:
+        #arguments:
+            #$isDebug: true
+            $isDebug: '%kernel.debug%'
+
+
+    Psr\Log\LoggerInterface $mdLogger: '@monolog.logger.markdown' # z kursu symfony casts przypisanie
