kommit z wykonanym kursem o secret vault

--- a/.env
+++ b/.env
@@ -17,3 +17,7 @@
 APP_ENV=dev
 APP_SECRET=c8d7d33bdd5bf9bd8bf4c51bfae4ffee
 ###< symfony/framework-bundle ###
+
+###> sentry/sentry-symfony ###
+SENTRY_DSN=
+###< sentry/sentry-symfony ###
