--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-iconv": "*",
         "knplabs/knp-markdown-bundle": "^1.9",
         "sensio/framework-extra-bundle": "^6.2",
+        "sentry/sentry-symfony": "^4.2",
         "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
@@ -61,11 +62,12 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "5.3.*"
         }
     },
     "require-dev": {
+        "paragonie/sodium_compat": "^1.17",
         "symfony/debug-bundle": "5.3.*",
         "symfony/stopwatch": "5.3.*",
         "symfony/web-profiler-bundle": "5.3.*"
