Komenda już wgrana. Drugi kurs symfonycasts ukończony

--- a/.env
+++ b/.env
@@ -19,5 +19,6 @@ APP_SECRET=c8d7d33bdd5bf9bd8bf4c51bfae4ffee
 ###< symfony/framework-bundle ###
 
 ###> sentry/sentry-symfony ###
-SENTRY_DSN=
+#SENTRY_DSN=
+#zostało zakodowane więc kasujemy stąd aby odczytał zakodowane haseło.
 ###< sentry/sentry-symfony ###
