--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
     "require-dev": {
         "paragonie/sodium_compat": "^1.17",
         "symfony/debug-bundle": "5.3.*",
+        "symfony/maker-bundle": "^1.34",
         "symfony/stopwatch": "5.3.*",
         "symfony/web-profiler-bundle": "5.3.*"
     }
