--- a/.env
+++ b/.env
@@ -22,3 +22,12 @@ APP_SECRET=c8d7d33bdd5bf9bd8bf4c51bfae4ffee
 #SENTRY_DSN=
 #zostało zakodowane więc kasujemy stąd aby odczytał zakodowane haseło.
 ###< sentry/sentry-symfony ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
+DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+###< doctrine/doctrine-bundle ###
