--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,12 @@ services:
       # - ./docker/db/data:/var/lib/postgresql/data:rw
 ###< doctrine/doctrine-bundle ###
 
+  adminer:
+    image: adminer
+    container_name: php-project-001-adminer
+    ports:
+      - 8888:8080
+
 volumes:
 ###> doctrine/doctrine-bundle ###
   db-data:
