--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,15 @@
         "php": ">=8.0.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "babdev/pagerfanta-bundle": "^3.4",
         "composer/package-versions-deprecated": "1.11.99.4",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
         "knplabs/knp-markdown-bundle": "^1.9",
         "knplabs/knp-time-bundle": "^1.17",
+        "pagerfanta/doctrine-orm-adapter": "^3.4",
+        "pagerfanta/twig": "^3.4",
         "sensio/framework-extra-bundle": "^6.2",
         "sentry/sentry-symfony": "^4.2",
         "stof/doctrine-extensions-bundle": "^1.6",
