--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
     "devDependencies": {
+        "@popperjs/core": "^2.10.2",
         "@symfony/stimulus-bridge": "^2.0.0",
+        "@symfony/ux-chartjs": "file:vendor/symfony/ux-chartjs/Resources/assets",
         "@symfony/webpack-encore": "^1.0.0",
         "bootstrap": "^5.1.3",
+        "chart.js": "^2.9.4",
         "core-js": "^3.0.0",
         "jquery": "^3.6.0",
         "regenerator-runtime": "^0.13.2",
