Chapter 27 security przerobiony. Zaraz startujemy z API i serializerem.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,12 @@
 security:
     enable_authenticator_manager: true
 
-    #hide_users_not_found: false
+    #hide_users_not_found: false - zabezpieczenie, nie wiadom czy user jest w bazie wtedy
+
+    role_hierarchy:
+        ROLE_ADMIN: [ 'ROLE_COMMENT_ADMIN', 'ROLE_USER_ADMIN', 'ROLE_ALLOWED_TO_SWITCH' ]
+        ROLE_HUMAN_RESOURCES: [ 'ROLE_USER_ADMIN' ]
+
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
@@ -20,7 +25,11 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            custom_authenticator: App\Security\LoginFormAuthenticator
+            entry_point: App\Security\LoginFormAuthenticator
+            #mozemy tutaj podac kazdy serwis, który implementuje AuthenticationEntryPointInterface
+            custom_authenticator:
+                - App\Security\LoginFormAuthenticator
+                - App\Security\DummyAuthenticator
             logout: true
 
             remember_me:
@@ -28,6 +37,8 @@ security:
                 secret: '%kernel.secret%'
                 #always_rememeber_me: true
                 signature_properties: [password]
+
+            switch_user: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -38,5 +49,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin, roles: ROLE_USER }
+        - { path: ^/admin/login, roles: PUBLIC_ACCESS }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
