--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-iconv": "*",
         "babdev/pagerfanta-bundle": "^3.4",
         "composer/package-versions-deprecated": "1.11.99.4",
+        "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
@@ -16,6 +17,7 @@
         "knplabs/knp-time-bundle": "^1.17",
         "pagerfanta/doctrine-orm-adapter": "^3.4",
         "pagerfanta/twig": "^3.4",
+        "phpdocumentor/reflection-docblock": "^5.3",
         "sensio/framework-extra-bundle": "^6.2",
         "sentry/sentry-symfony": "^4.2",
         "stof/doctrine-extensions-bundle": "^1.6",
@@ -25,9 +27,12 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
         "symfony/monolog-bundle": "^3.0",
+        "symfony/property-access": "5.3.*",
+        "symfony/property-info": "5.3.*",
         "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "5.3.*",
         "symfony/security-bundle": "5.3.*",
+        "symfony/serializer": "5.3.*",
         "symfony/twig-bundle": "5.3.*",
         "symfony/ux-chartjs": "^1.3",
         "symfony/webpack-encore-bundle": "^1.12",
