--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "5.3.*",
@@ -35,6 +36,7 @@
         "symfony/serializer": "5.3.*",
         "symfony/twig-bundle": "5.3.*",
         "symfony/ux-chartjs": "^1.3",
+        "symfony/validator": "5.3.*",
         "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "5.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
