--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
+        "easycorp/easyadmin-bundle": "^3",
         "knplabs/knp-markdown-bundle": "^1.9",
         "knplabs/knp-time-bundle": "^1.17",
         "pagerfanta/doctrine-orm-adapter": "^3.4",
