--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.0.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "api-platform/core": "^2.6",
         "babdev/pagerfanta-bundle": "^3.4",
         "composer/package-versions-deprecated": "1.11.99.4",
         "doctrine/annotations": "^1.0",
@@ -16,6 +17,7 @@
         "easycorp/easyadmin-bundle": "^3",
         "knplabs/knp-markdown-bundle": "^1.9",
         "knplabs/knp-time-bundle": "^1.17",
+        "nelmio/cors-bundle": "^2.1",
         "pagerfanta/doctrine-orm-adapter": "^3.4",
         "pagerfanta/twig": "^3.4",
         "phpdocumentor/reflection-docblock": "^5.3",
@@ -25,9 +27,11 @@
         "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
+        "symfony/expression-language": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/mailer": "5.3.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "5.3.*",
         "symfony/property-info": "5.3.*",
