W trakcie przerabiania symfonyCasts, dodano sporo plików z kursu, zaraz instalujemy dodatek do tworzenie pdf z html.

--- a/.env
+++ b/.env
@@ -37,5 +37,7 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://work@sotech.pl:test123@sotech.nq.pl:465?encryption=ssl&auth_mode=login
+##MAILER_DSN=smtp://af0a20e18b6bd4:2e321030c35adf@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+#port 587 lub 465 (SSL)
 ###< symfony/mailer ###
