--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "easycorp/easyadmin-bundle": "^3",
         "knplabs/knp-markdown-bundle": "^1.9",
         "knplabs/knp-time-bundle": "^1.17",
+        "league/html-to-markdown": "^5.0",
         "nelmio/cors-bundle": "^2.1",
         "pagerfanta/doctrine-orm-adapter": "^3.4",
         "pagerfanta/twig": "^3.4",
@@ -45,6 +46,7 @@
         "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "5.3.*",
         "symfonycasts/verify-email-bundle": "^1.6",
+        "twig/cssinliner-extra": "^3.3",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/string-extra": "^3.3",
         "twig/twig": "^2.12|^3.0"
@@ -95,8 +97,12 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "paragonie/sodium_compat": "^1.17",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.3.*",
+        "symfony/css-selector": "5.3.*",
         "symfony/debug-bundle": "5.3.*",
         "symfony/maker-bundle": "^1.34",
+        "symfony/phpunit-bridge": "^5.3",
         "symfony/stopwatch": "5.3.*",
         "symfony/web-profiler-bundle": "5.3.*",
         "zenstruck/foundry": "^1.13"
