--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,10 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
     form_themes: ['bootstrap_5_layout.html.twig']
+    paths:
+        'public/images': images
+        'assets/styles': email_styles
+        #link do zdjęć, drugi element po : moze być dowolny.
 
 when@test:
     twig:
