--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-
+        "@algolia/autocomplete-js": "^1.5.0",
         "axios": "^0.24.0"
     }
 }
