--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/ux-chartjs": "file:vendor/symfony/ux-chartjs/Resources/assets",
         "@symfony/webpack-encore": "^1.0.0",
+        "autocomplete.js": "^0.38.0",
+        "autoprefixer": "^10.4.0",
         "bootstrap": "^5.1.3",
         "chart.js": "^2.9.4",
         "core-js": "^3.0.0",
+        "file-loader": "^6.0.0",
         "jquery": "^3.6.0",
+        "postcss-loader": "^6.0.0",
         "regenerator-runtime": "^0.13.2",
+        "sass": "^1.44.0",
+        "sass-loader": "^12.0.0",
         "stimulus": "^2.0.0",
         "webpack-notifier": "^1.6.0"
     },
@@ -21,7 +27,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@algolia/autocomplete-js": "^1.5.0",
         "axios": "^0.24.0"
-    }
+    },
+    "browserslist": [
+        "> 10%"
+    ]
 }
